Add named-exports-with-default package with TypeScript configuration and usage examples

--- a/packages/named-exports-with-default/package.json
+++ b/packages/named-exports-with-default/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "using-internal-esmodule",
+  "name": "named-exports-with-default",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,14 +11,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "files": [
-    "dist"
-  ],
-  "dependencies": {
-    "named-exports-no-default": "workspace:*",
-    "named-exports-with-default": "workspace:*"
-  },
+  "license": "Apache-2.0",
   "devDependencies": {
     "typescript": "^5.7.2"
   }
